<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#ffffff">
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fanhui"
            android:padding="10dp"
            android:layout_marginTop="10dp"
             android:layout_centerVertical="true"
            android:id="@+id/image_mimadenglu_fanhui"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/denglu"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            />
    </RelativeLayout>
    <View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="#eeeeee"
	    android:layout_marginTop="5dp"/>
    <View 
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/bk_yuan"
        android:layout_gravity="center"
	    android:layout_marginTop="30dp"/>
    <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	   
	    android:layout_gravity="center"
	    android:layout_marginTop="5dp"
	    android:text="@string/youxiangdenglu"
	    android:textSize="17sp"
	    android:drawablePadding="5dp"
	    />
<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="45dp"
	    android:layout_marginTop="85dp"
	    android:background="@drawable/shoujihaoma_bk"
	    android:layout_gravity="center"
	    android:orientation="horizontal"
	    android:layout_marginLeft="30dp"
	    android:layout_marginRight="30dp"
	    >
	  
	    
	    <EditText 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:hint="输入邮箱"
	        android:padding="10dp"
	        android:background="@null"
	        android:id="@+id/edit_shoujihaoma_mimadenglu"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="8dp"
	    android:layout_gravity="center"
	    android:background="@drawable/shoujihaoma_bk"
	    android:layout_marginLeft="30dp"
	    android:layout_marginRight="30dp">
	    <EditText 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/shurumima"
	        android:background="@null"
	        android:id="@+id/edit_shurumima_mimadenglu"
	        android:layout_gravity="center"
	        android:paddingLeft="10dp"
	           android:layout_weight="1"
	           android:maxLength="8"
	           android:inputType="textPassword"/>
	   <LinearLayout 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:orientation="vertical"
	       android:layout_gravity="center">
	       <TextView android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:text="@string/wangjimima"
	           android:paddingRight="10dp"
	           android:id="@+id/textView_wangjimima"/>
	      
	       <View 
	           android:layout_width="60dp"
	           android:layout_height="1dp"
	           android:background="#eeeeee"/>
	   </LinearLayout>
	</LinearLayout>
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="80dp">
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_centerInParent="true">
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/shoujidenglu"
	           android:id="@+id/text_fanhuishoujidenglu" 
	           android:layout_gravity="center"/>
	        <View 
	            android:layout_width="60dp"
	            android:layout_height="1dp"
	            android:background="#eeeeee"
	            android:layout_gravity="center"/>
	    </LinearLayout>
	   
	    
	</RelativeLayout>
	<ImageView 
	    android:layout_marginLeft="30dp"
	    android:layout_marginRight="30dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:src="@drawable/image_denglu"
	    android:layout_gravity="center"
	    
	    android:layout_marginTop="18dp"
	  android:scaleType="fitXY" 
	  android:id="@+id/image_denglu_mimadenglu"/>
</LinearLayout>
